--- a/Technikon-FrontEnd/src/index.css
+++ b/Technikon-FrontEnd/src/index.css
@@ -2,4 +2,10 @@
 body {
   margin: 0;
   padding: 0;
+  /* background: 
+    linear-gradient( rgba(0, 52, 101, 0.78),rgba(0, 133, 255, 0.78)),
+    url("/background.png") no-repeat center center fixed;
+  background-size: cover;
+  background-blend-mode: overlay;
+  height: 100vh; */
 }
